argocd/dev/dollardollar-dev/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dollardollar-dev
  name: dollardollar-dev
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: dollardollar-dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: dollardollar-dev
    spec:
      imagePullSecrets:
        - name: gitea-pull-secrets
      containers:
        - envFrom:
            - secretRef:
                name: dollardollar-secrets
          image: gitea.yanello.net/marcus/dollardollar:latest@sha256:fd1ed28c1460a138590ae33269c100c758748d1d5ca083d6780eae100cdb1451
          imagePullPolicy: Always
          name: dollardollar-dev
          ports:
            - containerPort: 5001
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
