argocd/dev/dollardollar-dev/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dollardollar-dev
  name: dollardollar-dev
spec:
  ports:
    - name: "http"
      port: 5001
      targetPort: 5001
  selector:
    app: dollardollar-dev
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.8.8
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
